--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+
+		</dependency>
+
 	</dependencies>
 
 	<build>
