--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/world
 spring.datasource.username=root
-spring.datasource.password=Honda$1010
+spring.datasource.password=admin
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 spring.jpa.hibernate.ddl-auto=update
+
+server.servlet.context-path=/msk
 #debug=true
 
