jpa security added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ server.servlet.context-path=/msk
 server.port=8081
 #debug=true
 
+#security
+spring.security.user.name=shalabh
+spring.security.user.password=12345
+
