--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=MOBILE-SERVICE
 spring.datasource.url=jdbc:mysql://localhost:3306/world
 spring.datasource.username=root
 spring.datasource.password=admin
